--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build the Twine game
+name: Hi
 
 permissions:
   contents: write
@@ -26,14 +26,14 @@ jobs:
 
       - name: Set game configuration
         env:
-          APP_NAME: My Twine game
+          APP_NAME: Test
           DESCRIPTION: My Twine game description
 
           # This must be of the format "N.N.N", where the N's are all numbers
           VERSION: 1.0.0
 
           # By default, the author will be your name on GitHub. You can manually change this.
-          AUTHOR: ${{ github.repository_owner }}
+          AUTHOR: $Finley
 
           # If this to 'true', a copy of your game will also be hosted on the web at https://USERNAME.github.io/REPO_NAME
           # Delete or comment out this line to disable that
